--- a/UX/1.Research/README
+++ b/UX/1.Research/README
@@ -1,4 +1,4 @@
-Contains research surveys, personas, scenarios, user stories.
+Contains competitive benchmarks, research surveys, personas, scenarios, user stories.
 
 All *preliminary* research that preceded the start of the project can be found here:
 
