Update Readme in User Testing UX

--- a/UX/4.User_Testing/Readme
+++ b/UX/4.User_Testing/Readme
@@ -1,4 +1,7 @@
 This folder includes recordings of users testing our Figma prototype for the LMS.
+The videos are quite heavy, so please find them in this Google Drive folder:
+https://drive.google.com/drive/folders/1Vxf7qIXiv23ajfelBRLCZtT8lpvsijOQ?usp=sharing 
+
 All of the users are lecturers or teachers active in a university or school context.
 The users were all asked to think aloud while performing the tasks.
 The folders also includes a file containing the introduction I gave the users before starting the test,
